# python-hf-model-research-app

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: preflight.sh
src/hf_exporter/: .env.example  __main__.py  cli.py  notes_store.py  projects.py  service.py  web.py
src/hf_exporter/static/: index.html  projects.html  records.html
tests/: test_cli.py  test_web.py
